# Couch

./: .gitignore  README.md  index.html  package-lock.json  package.json  test.py  vite.config.ts
src/: App.css  App.tsx  CrunchyrollBrowser.css  CrunchyrollViewer.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
